--- a/tool/vscode-pi/package.json
+++ b/tool/vscode-pi/package.json
@@ -13,7 +13,8 @@
         ],
         "extensions": [
           ".pi"
-        ]
+        ],
+        "configuration": "./pi-config.json"
       }
     ],
     "grammars": [
